<resources>
    <string name="app_name">MyLocalization</string>
    <string name="app_title">Welcome to  my Apps!</string>

    <string name="form_nama">Nama Lengkap</string>
    <string name="form_email">Email</string>
    <string name="form_handphone">Nomor Handphone</string>
    <string name="form_password">Password</string>

    <string name="btn_simpan">Simpan</string>
    <string name="btn_lang">Ganti Bahasa</string>
</resources>
