<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.amikom.mylocalization.MainActivity"
    android:orientation="vertical"
    android:autofillHints="@string/app_name">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Welcome to  my Apps!"
        android:hint="@string/app_title"
        android:paddingBottom="20dp"
        android:textSize="20dp"

        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Nama Lengkap"

        android:paddingBottom="5dp"
        />
    <EditText
        android:id="@+id/txtNama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/form_nama"
        android:text="" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Email"
        android:hint="@string/form_email"
        android:paddingBottom="5dp"
        />
    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Nomor Handphone"
        android:hint="@string/form_handphone"
        android:paddingBottom="5dp"
        />
    <EditText
        android:id="@+id/txtPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Password"
        android:hint="@string/form_password"
        android:paddingBottom="5dp"
        />
    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Simpan"
        android:hint="@string/btn_simpan"
        android:layout_margin="15dp"/>

    <Button
        android:id="@+id/btnSetLang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Set Language"
        android:hint="@string/btn_lang"
        android:layout_margin="15dp"/>

</LinearLayout>
